@@ -24,7 +24,7 @@ class Float(Field):
     def __init__(self, string='', digits=None,  help='', required=False,
             readonly=False, domain=None, states=None, change_default=False,
             select=0, on_change=None, on_change_with=None, depends=None,
-            order_field=None, context=None):
+            order_field=None, context=None, loading='eager'):
         '''
         :param digits: a list of two integers defining the total
             of digits and the number of decimals of the float.
@@ -33,7 +33,8 @@ class Float(Field):
                 required=required, readonly=readonly, domain=domain,
                 states=states, change_default=change_default, select=select,
                 on_change=on_change, on_change_with=on_change_with,
-                depends=depends, order_field=order_field, context=context)
+                depends=depends, order_field=order_field, context=context,
+                loading=loading)
         self.__digits = None
         self.digits = digits
 
