@@ -14,7 +14,7 @@ class Many2One(Field):
             ondelete='SET NULL', datetime_field=None, help='', required=False,
             readonly=False, domain=None, states=None, change_default=False,
             select=0, on_change=None, on_change_with=None, depends=None,
-            order_field=None, context=None):
+            order_field=None, context=None, loading='eager'):
         '''
         :param model_name: The name of the target model.
         :param left: The name of the field to store the left value for
@@ -40,7 +40,8 @@ class Many2One(Field):
                 required=required, readonly=readonly, domain=domain,
                 states=states, change_default=change_default, select=select,
                 on_change=on_change, on_change_with=on_change_with,
-                depends=depends, order_field=order_field, context=context)
+                depends=depends, order_field=order_field, context=context,
+                loading=loading)
         self.model_name = model_name
         self.left = left
         self.right = right
